Fix bug where horizontal scrollbar no longer visible

--- a/stylesheets/ember-table.css
+++ b/stylesheets/ember-table.css
@@ -17,6 +17,9 @@
   background-color: #f7f7f7;
   border: 1px solid #dddddd;
   overflow: hidden;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .tables-container * {
   -webkit-box-sizing: border-box;
