--- a/stylesheets/setup.less
+++ b/stylesheets/setup.less
@@ -11,7 +11,7 @@ html, body{
   width: 100%;
 }
 .presentation-container{
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 1000px;
   margin: auto;
 }
